# us_electricity_demand_predictor

./: .gitignore  README.md  pyproject.toml  ruff.toml
docker_compose/: Makefile  electricity_demand_historical_pipeline.yml  historical_pipeline.yml  redpanda.yml
services/demand_features/: Dockerfile  Makefile  README.md  pyproject.toml
services/demand_features/src/: config.py  main.py
services/demand_predictor/: Dockerfile  Makefile  README.md  pyproject.toml
services/demand_predictor/src/: config.py  feature_reader.py  main.py
services/demand_predictor/src/models/: dummy_model.py  xgboost_model.py
services/demand_to_feature_store/: Makefile
services/demand_to_feature_store/src/: config.py
services/feature_demand/: Dockerfile  Makefile  README.md  pyproject.toml
services/feature_demand/src/: config.py  main.py
services/inference_client/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
services/inference_client/src/: config.py  feature_creator.py  main.py  model_fetcher.py  plots.py  utils.py
services/inference_client/src/api/: electricity_api.py  weather_api.py
services/inference_client/src/models/: xgboost_model.py
services/ingest_demand/: Makefile  README.md  pyproject.toml
services/ingest_demand/src/: config.py  main.py  run.py
services/ingest_weather/: Dockerfile  Makefile  README.md  pyproject.toml
services/to_feature_store/: Dockerfile  pyproject.toml
services/to_feature_store_demand/: Makefile  README.md  pyproject.toml
services/to_feature_store_weather/: README.md  pyproject.toml
(+9 files in other folders)
