[project]
name = "demand-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "comet-ml>=3.49.9",
    "hopsworks>=4.2.2",
    "loguru>=0.7.3",
    "optuna>=4.3.0",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
